--- a/_config.yml
+++ b/_config.yml
@@ -15,24 +15,19 @@ logo: /images/dist/android-chrome-384x384.png
 social:
   name: Aleem Rehman
   links:
-    - https://twitter.com/mmckvr
-    - https://github.com/mckeever02
+    - https://twitter.com/aleem1a
+    - https://github.com/AleemRehman
   twitter:
-    username: mmckvr
+    username: aleem1a
     url: https://twitter.com/
   github:
-    username: mckeever02
+    username: AleemRehman
     url: https://github.com/
   instagram:
-    username: mmckvr
+    username: aleem1a
     url: https://instagram.com/
-  dribbble:
-    username: mckvr
-    url: https://dribbble.com/
-  email: michael@mckvr.com
+  email: contact@aleemrehman.co
 
-webmaster_verifications:
-  google: IMC-lwHL5ZqPd7MdL2mVE5N_7fILL5b7bkwiq-q4yss
 
 #directores
 imageurl: /images/dist/
