--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "The Portfolio of Aleem Rehman",
+    "name": "The Portfolio of Aleem Ur-Rehman",
     "short_name": "arco",
     "icons": [
         {
